# fiap-mba-multi-agent

./: .dockerignore  .gitignore  .ruff.toml  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  railway.json
.github/workflows/: ci.yml  pages.yml  pr-comment.yml
apps/exemplo/hello_backend/: main.py  project.yaml  pyproject.toml
apps/exemplo/hello_frontend/: project.yaml  pyproject.toml
apps/group_one/bragdev/: README.md  SOURCES.md  project.yaml
apps/group_one/careeros/: README.md  SOURCES.md  project.yaml
apps/static-web-apps/ai-business-strategy/: index.html  mapa.html
brand/: DESIGN.md  README.md  app.js  components.css  components.html  components.js  deck-anim.js  index.html  loader.css  loader.js  mascot.css  robot.js  slides.html  styles.css
docs/superpowers/plans/: 2026-05-09-mba-monorepo.md
docs/superpowers/specs/: 2026-05-08-mba-monorepo-design.md
homepage/: loader.py  main.py  schema.py
homepage/static/: styles.css
homepage/templates/: base.html  index.html
homepage/tests/: conftest.py  test_loader.py  test_main.py  test_schema.py
scripts/: build_pages.sh  new_project.py
scripts/tests/: test_new_project.py
