[project]
name = "fiap-mba-multi-agent"
version = "0.1.0"
description = "Monorepo FIAP MBA AI Engineering & Multi-Agents"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[tool.uv.workspace]
members = ["apps/*/*"]
# Pure static frontends (served by the homepage via StaticFiles) carry no Python
# package, so they must be excluded from the uv workspace — otherwise the
# `apps/*/*` glob flags them as members missing a pyproject.toml and breaks
# `uv sync`.
exclude = ["apps/static-web-apps/*", "apps/group_one/bragdev"]

[tool.uv.sources]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["homepage/tests", "scripts/tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["homepage"]
